--- a/.learn/resets/03-separate-stylesheet/index.html
+++ b/.learn/resets/03-separate-stylesheet/index.html
@@ -2,11 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
-		<title>05 Class selector</title>
 	</head>
-
 	<body>
-		<p class="b-blue">Hello!</p>
-		<p class="b-blue">World!</p>
+		My background should be blue.
 	</body>
 </html>
