--- a/.learn/resets/03.1-background/index.html
+++ b/.learn/resets/03.1-background/index.html
@@ -2,11 +2,9 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
-		<title>05 Class selector</title>
+		<title>03.1 Background</title>
 	</head>
-
 	<body>
-		<p class="b-blue">Hello!</p>
-		<p class="b-blue">World!</p>
+		My background should be an image with the size "contain"
 	</body>
 </html>
