--- a/.learn/resets/04-list-styling/index.html
+++ b/.learn/resets/04-list-styling/index.html
@@ -14,23 +14,23 @@
 			<h4>Coca Cola drinks</h4>
 			<ol class="cocacola">
 				<li>Coca Cola</li>
-				<li>Pepper</li>
+				<li>Dr. Pepper</li>
 				<li>Fanta</li>
 			</ol>
 
 			<h4>Pepsi drinks</h4>
-			<ul class="pepsi">
+			<ol class="pepsi">
 				<li>Pepsi Cola</li>
 				<li>Mountain Dew</li>
 				<li>Gatorade</li>
-			</ul>
+			</ol>
 
 			<h4>Healthy drinks</h4>
-			<ol class="healthy">
+			<ul class="healthy">
 				<li>Kombucha</li>
 				<li>Kale juice</li>
 				<li>Sparkling Water</li>
-			</ol>
+			</ul>
 
 			<h4>Web-developer drinks</h4>
 			<ul class="dev-drinks">
